--- a/app/views/weather/show.turbo_stream.erb
+++ b/app/views/weather/show.turbo_stream.erb
@@ -5,11 +5,11 @@
     <% else %>
       <p>Address: <%= @location.address %></p>
       <p>Coordinates: <%= @location.coordinates.join(', ') %></p>
-      <p>Current Temperature: <%= @current_temperature %> °F</p>
-      <p>High Temperature: <%= @high_low_temps[:high] %> °F</p>
-      <p>Low Temperature: <%= @high_low_temps[:low] %> °F</p>
+      <p>Current Temperature: <%= @forecast.current_temperature %> °F</p>
+      <p>High Temperature: <%= @forecast.high_temperature %> °F</p>
+      <p>Low Temperature: <%= @forecast.low_temperature %> °F</p>
       <h3>Extended forecast:</h3>
-      <% @five_day_forecast.each do |f| %>
+      <% @forecast.five_day_forecast.each do |f| %>
         <p>
           Date and Time: <%= f[:date] %> <br>
           Temperature: <%= f[:temp] %> °F <br>
